<resources>
    <string name="app_name">Aero India 2023</string>
    <string name="button_name">Generate OTP</string>
    <string name="register_heading">USER REGISTRATION</string>
    <string name="login_heading">USER LOGIN</string>
    <string name="email_address">*Email address</string>
    <string name="username">*Name</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="mobileNo">*Mobile number</string>
    <string name="otp_heading">OTP VERIFICATION</string>
    <string name="_3_30pm">3:30pm</string>
    <string name="_5_30pm">5:30pm</string>
    <string name="manthan_the_annual_defense_innovation_event">Manthan- The Annual Defense Innovation Event</string>
    <string name="tuesday_october_8">Tuesday, October 8</string>
    <string name="line">line</string>
    <string name="calendar">calendar</string>
    <string name="agenda">Agendas</string>
    <string name="assocham">Assocham</string>
    <string name="ssb_aircraft_repair_nplant_jsc">SSB AIRCRAFT REPAIR \nPLANT, JSC</string>
    <string name="india">India</string>
    <string name="hall_12_12s_34">Hall 12 12S.34</string>
    <string name="logo">logo</string>
    <string name="verify">VERIFY</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="edit_text">Tap to edit profile photo</string>
    <string name="all_exhibitors">All Exhibitors</string>
    <string name="designation">Designation</string>
    <string name="intro_welcome_text">Welcome to Aero India 2023 event! Enter your email address below to get started.</string>

    // Usertype strings
    <string name="Api_key">AIzaSyDUk-YDNCE5c7UdnlQX5JY3Tz16rRGEH-8</string>

    //Maps Strings
    <string name="title_activity_maps">MapsActivity</string>
    <string name="profile_image">profile_image</string>
    <string name="mr_alok_nanda">Mr. Alok Nanda</string>
    <string name="ceo_and_cto">CEO and CTO</string>
    <string name="ge_india_industrial_pvt_ltd_ge_south_asia">GE India Industrial Pvt. Ltd./ GE South Asia</string>
    <string name="technologies_required_for_manufacturing_of_an_indigenous_aero_engine_for_atmanirbhar_bharat">Technologies required for manufacturing of an Indigenous Aero engine for Atmanirbhar Bharat</string>
    <string name="_3_30pm_5_30pm">3:30pm - 5:30pm</string>
    <string name="information">information</string>
    <string name="speakers">speakers</string>
    <string name="notes">notes</string>
    <string name="products">Products</string>
    <string name="air_systems">Air Systems</string>
    <string name="_17">17</string>
    <string name="product_image">product_image</string>
    <string name="high_altitude_parachute_hap">High Altitude Parachute(HAP)</string>
    <string name="category">Category</string>
    <string name="exhibitor">Exhibitor</string>
    <string name="gliders_india_limited">Gliders India Limited</string>
    <string name="description">Description</string>
    <string name="high_altitude_parachute_has_been_designed_and_developed_for_use_in_high_altitude_dropping_zones_high_altitude_parachute_has_been_designed_and_developed_for_use_in_high_altitude_dropping_zones_high_altitude_parachute_has_been_designed_and_developed_for_use_in_high_altitude_dropping_zones">High Altitude parachute has been designed and developed for use in high altitude dropping zones. High Altitude parachute has been designed and developed for use in high altitude dropping zones. High Altitude parachute has been designed and developed for use in high altitude dropping zones</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="my_name">My Name</string>
    <string name="sm">SM</string>
    <string name="icon">icon</string>
    <string name="send_message">Send message</string>
    <string name="my_profile_information">My Profile Information</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_and_delete_my_account">Sign Out and delete My Account</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="biography">Biography</string>
    <string name="ficci">FICCI</string>
    <string name="all_speakers">All Speakers</string>
    <string name="all_events">All Agendas</string>
    <string name="nodal_information">Nodal Information</string>
    <string name="email">Email</string>
    <string name="manish_gmail_com">manish@gmail.com</string>
    <string name="contact_information">Contact Information</string>
    <string name="kathwada_gidc_plot_no_24_road_no_54_odhav_road_ahmedabad_382430_gujarat_india">Kathwada GIDC Plot No 24, Road NO 54 Odhav Road Ahmedabad- 382430, Gujarat, India</string>
    <string name="_8989898989">8989898989</string>
    <string name="www_amd_gov_in">www.amd.gov.in</string>
    <string name="amdesigns">AMDesigns</string>
    <string name="add_update_note">Add/Update Note</string>
    <string name="note">Note</string>
    <string name="events">Events</string>
    <string name="exhibitors">Exhibitors</string>
    <string name="title_activity_resolved_remarks">ResolvedRemarksActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alert_dialog_text">Select an option</string>
    <string name="yelahanka_air_force_station">Yelahanka Air Force Station</string>
    <string name="sun">SUN</string>
    <string name="_1_23">1/23</string>
    <string name="_27">27°</string>
    <string name="_15">/15°</string>
    <string name="_1">1%</string>
    <string name="sunny">Sunny</string>
    <string-array name="user_types">
        <item>None</item>
        <item>Delegate</item>
        <item>Liaison officer</item>
        <item>Manager</item>
    </string-array>
</resources>