<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/speaker_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_img"
            android:layout_margin="5dp"
            android:contentDescription="@string/profile_image" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/agenda_line"
            android:contentDescription="@string/line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/speaker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mr_alok_nanda"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ceo_and_cto"
                android:textSize="16sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ge_india_industrial_pvt_ltd_ge_south_asia"
                android:textSize="14sp"
                android:layout_marginBottom="3dp"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>