<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/exhibitor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ssb_aircraft_repair_nplant_jsc"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#808080"
                android:text="@string/india"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#808080"
                android:text="@string/hall_12_12s_34"
                android:textSize="12sp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/aeroindia_logo"
            android:layout_gravity="center"
            android:contentDescription="@string/logo" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@drawable/ic_star_border"
            android:buttonTint="@color/black"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>