<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img_agenda"
    tools:context=".products.SelectedProductActivity">

    <ImageView
        android:id="@+id/above_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/main_line_above"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/line" />

    <ImageView
        android:id="@+id/product_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/above_line"
        android:contentDescription="@string/product_image" />


    <ImageView
        android:id="@+id/below_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/above_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_img"
        android:contentDescription="@string/line" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_altitude_parachute_hap"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/below_line"
        android:background="#F0F3F7"
        android:paddingVertical="10dp"
        android:paddingHorizontal="7dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F0F3F7"
        android:paddingVertical="10dp"
        android:paddingHorizontal="7dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <TextView
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textAllCaps="true"
            android:textColor="#6A6667"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:clickable="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/line"
            android:src="@drawable/profile_line"/>

        <TextView
            android:id="@+id/exhibitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exhibitors"
            android:textAllCaps="true"
            android:textColor="#6A6667"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1"
            android:clickable="true"
            />

    </LinearLayout>


    <ImageView
        android:id="@+id/under_line"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        android:layout_marginStart="20dp"
        android:src="@drawable/below_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/under_line"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:background="@drawable/time_background"
                android:textColor="@color/white"
                android:padding="3dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/air_systems"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exhibitor"
                android:background="@drawable/time_background"
                android:textColor="@color/white"
                android:padding="3dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/exhibitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/gliders_india_limited"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:background="@drawable/time_background"
                android:textColor="@color/white"
                android:padding="3dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/high_altitude_parachute_has_been_designed_and_developed_for_use_in_high_altitude_dropping_zones_high_altitude_parachute_has_been_designed_and_developed_for_use_in_high_altitude_dropping_zones_high_altitude_parachute_has_been_designed_and_developed_for_use_in_high_altitude_dropping_zones"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="100dp"/>

        </LinearLayout>
        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/exhibitors_card"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/under_line"/>


</androidx.constraintlayout.widget.ConstraintLayout>