<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/product_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="2dp"
    app:strokeColor="@color/black"
    app:strokeWidth="2dp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginVertical="2dp"
    android:layout_marginHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/line"
            android:src="@drawable/agenda_line"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/air_systems"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:paddingVertical="15dp"
            android:layout_weight="0.5"
            />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
